--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: single_page
 page: single_documentation_page
-title: Documentation - Koncrete | Responsive Construction, Industrial WordPress Theme
+title: Documentation - Optimax - SEO & Digital Marketing Agency Bootstrap 4 Template
 ---
