--- a/doc2.html
+++ b/doc2.html
@@ -1,7 +1,7 @@
 ---
 layout: dht
 page: new layout for documentation
-title: Documentation - Koncrete | Responsive Construction, Industrial WordPress Theme
-theme_name: Koncrete
+title: Documentation - Optimax | Responsive Construction, Industrial WordPress Theme
+theme_name: Optimax
 theme_sub: Responsive Construction, Industrial WordPress Theme
 ---
